tests/paczka1/fuzzy1/90162440.err
Error in line 33: YGORLrjYgEp S716 36,5
Error in line 35: IbF04 S716 4,4
